--- a/www/css/index.css
+++ b/www/css/index.css
@@ -39,70 +39,44 @@ body {
   font-family: 'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
   font-size: 12px;
   height: 100%;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   text-transform: uppercase;
   width: 100%;
 }
 
-/* Portrait layout (default) */
-.background {
-  position: absolute;
-  background: url(../img/ubirch_logo_white.svg) no-repeat center top; /* 170px x 200px */
-  left: 50%;
-  top: 50%;
-  height: 50px; /* text area height */
-  width: 225px; /* text area width */
-  text-align: center;
-  padding: 180px 0px 0px 0px; /* image height is 200px (bottom 20px are overlapped with text) */
-  margin: -115px 0px 0px -112px; /* offset vertical: half of image height and text area height */
-  /* offset horizontal: half of text area width */
+.app {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+.app .map {
+    height: 70%;
+    background: #333333;
+}
+.app .detail {
+    height: 30%;
+    background: url('../img/ubirch_logo_white.svg') no-repeat center;
+    background-size: 170px 200px;
+    overflow-x: hidden;
+}
+.app .detail .content {
+    text-align: center;
 }
 
-#app {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+/* animation */
+.app .map svg, .app .detail .content {
+    opacity: 0;
+    -webkit-transition: opacity 0.5s ease-out; /* Firefox */
+    -moz-transition: opacity 0.5s ease-out; /* WebKit */
+    -o-transition: opacity 0.5s ease-out; /* Opera */
+    transition: opacity 0.5s ease-out; /* Standard */
 }
-
-/* Landscape layout (with min-width) */
-@media screen and (min-aspect-ratio: 1/1) and (min-width: 400px) {
-  .background {
-    background-position: left center;
-    padding: 75px 0px 75px 170px; /* padding-top + padding-bottom + text area = image height */
-    margin: -90px 0px 0px -198px; /* offset vertical: half of image height */
-    /* offset horizontal: half of image width and text area width */
-  }
-}
-
-@keyframes fade {
-  from {
-    opacity: 1.0;
-  }
-  50% {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1.0;
-  }
-}
-
-@-webkit-keyframes fade {
-  from {
-    opacity: 1.0;
-  }
-  50% {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1.0;
-  }
-}
-
-.map {
-  position: relative;
-  left: 0;
-  top: 0;
+.app.ready .map svg, .app .detail .content.visible {
+    opacity: 1;
 }
