--- a/www/css/flags.css
+++ b/www/css/flags.css
@@ -2,6 +2,8 @@
 	width: 32px;
 	height: 32px;
 	background:url(flags.png) no-repeat
+	display: inline-block;
+	vertical-align: middle;
 }
 
 .flag.flag-ad {background-position: -32px 0}
