--- a/www/css/flags.css
+++ b/www/css/flags.css
@@ -1,7 +1,7 @@
 .flag {
 	width: 32px;
 	height: 32px;
-	background:url(flags.png) no-repeat
+	background:url(flags.png) no-repeat;
 	display: inline-block;
 	vertical-align: middle;
 }
