--- a/www/css/flags.css
+++ b/www/css/flags.css
@@ -1,11 +1,10 @@
 .flag {
 	width: 32px;
 	height: 32px;
-	background:url(flags.png) no-repeat;
+	background:url('../img/flags.png') no-repeat;
 	display: inline-block;
 	vertical-align: middle;
 }
-
 .flag.flag-ad {background-position: -32px 0}
 .flag.flag-al {background-position: -64px 0}
 .flag.flag-at {background-position: -96px 0}
