--- a/www/css/index.css
+++ b/www/css/index.css
@@ -17,32 +17,33 @@
  * under the License.
  */
 * {
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
 
 body {
-  -webkit-touch-callout: none; /* prevent callout to copy image, etc when tap to hold */
-  -webkit-text-size-adjust: none; /* prevent webkit from resizing text to fit */
-  -webkit-user-select: none; /* prevent copy paste, to allow, change 'none' to 'text' */
-  background-color: #E4E4E4;
-  background-image: linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-  background-image: -webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-  background-image: -ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-  background-image: -webkit-gradient(
-          linear,
-          left top,
-          left bottom,
-          color-stop(0, #A7A7A7),
-          color-stop(0.51, #E4E4E4)
-  );
-  background-attachment: fixed;
-  font-family: 'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
-  font-size: 12px;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  text-transform: uppercase;
-  width: 100%;
+    -webkit-touch-callout: none; /* prevent callout to copy image, etc when tap to hold */
+    -webkit-text-size-adjust: none; /* prevent webkit from resizing text to fit */
+    -webkit-user-select: none; /* prevent copy paste, to allow, change 'none' to 'text' */
+    background-color: #E4E4E4;
+    background-image: linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image: -webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image: -ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image: -webkit-gradient(
+            linear,
+            left top,
+            left bottom,
+            color-stop(0, #A7A7A7),
+            color-stop(0.51, #E4E4E4)
+    );
+    background-attachment: fixed;
+    font-family: 'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+    font-size: 12px;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    text-transform: uppercase;
+    width: 100%;
+    overflow: hidden;
 }
 
 .app {
@@ -55,16 +56,18 @@ body {
     height: 100%;
     overflow: hidden;
 }
+
 .app .map {
     height: 70%;
     background: #333333;
 }
+
 .app .detail {
     height: 30%;
-    background: url('../img/ubirch_logo_white.svg') no-repeat center;
-    background-size: 170px 200px;
     overflow-x: hidden;
+    background: url('../img/ubirch_logo_white.svg') no-repeat center;
 }
+
 .app .detail .content {
     text-align: center;
 }
@@ -72,11 +75,85 @@ body {
 /* animation */
 .app .map svg, .app .detail .content {
     opacity: 0;
-    -webkit-transition: opacity 0.5s ease-out; /* Firefox */
-    -moz-transition: opacity 0.5s ease-out; /* WebKit */
-    -o-transition: opacity 0.5s ease-out; /* Opera */
-    transition: opacity 0.5s ease-out; /* Standard */
+    -webkit-transition: opacity 0.5s ease-out;
+    -moz-transition: opacity 0.5s ease-out;
+    -o-transition: opacity 0.5s ease-out;
+    transition: opacity 0.5s ease-out;
 }
+
 .app.ready .map svg, .app .detail .content.visible {
     opacity: 1;
+}
+
+.app .detail {
+    background-size: 0;
+    -webkit-transition: background-size 0.5s ease-out;
+    -moz-transition: background-size 0.5s ease-out;
+    -o-transition: background-size 0.5s ease-out;
+    transition: background-size 0.5s ease-out;
+}
+
+/* credits */
+.credits {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1;
+}
+
+.credits .leaf {
+    background: url('../img/ubirch_logo_tree.png') no-repeat center transparent;
+    background-size: cover;
+    display: inline-block;
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.credits .content {
+    opacity: 0;
+    display: table;
+    position: relative;
+    width: 0;
+    height: 0;
+}
+.credits .content h2 {
+    margin-bottom: 5px;
+}
+.credits .content .cell {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+}
+
+.credits.is-open {
+    right: 0;
+    bottom: 0;
+}
+
+.credits.is-open .content {
+    z-index: 2;
+    opacity: 1;
+    width: 100%;
+    height: 100%;
+}
+.credits.is-closing .content {
+    opacity: 0;
+}
+
+/* animation */
+.credits .leaf, .credits .content {
+    -webkit-transition: all 0.5s ease-out;
+    -moz-transition: all 0.5s ease-out;
+    -o-transition: all 0.5s ease-out;
+    transition: all 0.5s ease-out;
+}
+
+/* hover map */
+g#EU path:hover {
+    fill: steelblue;
 }
