try to fix res new handling for in app browser add margin to credits

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -126,6 +126,7 @@ body {
     width: 0;
     height: 0;
     font-size: 0;
+    margin: 10px;
 }
 .credits .content .bg {
     background: #ffffff;
