--- a/www/css/index.css
+++ b/www/css/index.css
@@ -63,15 +63,29 @@ body {
 }
 
 .app .detail {
-    height: 30%;
+    position: relative;
     overflow-x: hidden;
+    display: table;
+    width: 100%;
+    height: 30%;
+}
+.app .detail .bg {
+    opacity: 0.5;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
     background: url('../img/ubirch_logo_white.svg') no-repeat center;
+    z-index: -1;
 }
-
 .app .detail .content {
+    display: table-cell;
+    vertical-align: middle;
     text-align: center;
+    font-size: 30px;
+    text-shadow: 0 0 10px rgba(150, 150, 150, 1);
 }
-
 /* animation */
 .app .map svg, .app .detail .content {
     opacity: 0;
@@ -85,7 +99,7 @@ body {
     opacity: 1;
 }
 
-.app .detail {
+.app .detail .bg {
     background-size: 0;
     -webkit-transition: background-size 0.5s ease-out;
     -moz-transition: background-size 0.5s ease-out;
@@ -110,6 +124,9 @@ body {
     z-index: 1;
     margin: 5px;
     padding: 5px;
+    -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
 .credits .leaf {
     background: url('../img/ubirch_logo_tree.png') no-repeat center transparent;
@@ -126,7 +143,6 @@ body {
     width: 0;
     height: 0;
     font-size: 0;
-    margin: 10px;
 }
 .credits .content .bg {
     background: #ffffff;
@@ -134,6 +150,10 @@ body {
     border-radius: 10px;
     display: inline-block;
     padding: 50px;
+    margin: 10px;
+    -webkit-box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
 }
 .credits .content h2 {
     margin-bottom: 5px;
