--- a/www/css/index.css
+++ b/www/css/index.css
@@ -36,12 +36,11 @@ body {
             color-stop(0.51, #E4E4E4)
     );
     background-attachment: fixed;
-    font-family: 'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+    font-family: Lato, sans-serif;
     font-size: 12px;
     height: 100%;
     margin: 0;
     padding: 0;
-    text-transform: uppercase;
     width: 100%;
     overflow: hidden;
 }
@@ -126,6 +125,9 @@ body {
     top: 0;
     z-index: 1;
 }
+.credits h1 {
+    text-transform: uppercase;
+}
 .credits figure {
     -webkit-border-radius: 50%;
     border-radius: 50%;
@@ -182,6 +184,9 @@ body {
     vertical-align: middle;
     text-align: center;
 }
+.credits .content .grey {
+    color: rgb(143,143,143);
+}
 
 .credits.is-open, .credits.is-closed {
     right: 0;
@@ -194,6 +199,7 @@ body {
     height: 100%;
     font-size: 12px;
 }
+
 
 /* animation */
 .credits .content {
