--- a/www/css/index.css
+++ b/www/css/index.css
@@ -172,6 +172,7 @@ body {
     -webkit-box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
     -moz-box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
+    display: none;
 }
 .credits .content h2 {
     margin-bottom: 5px;
@@ -198,6 +199,9 @@ body {
     width: 100%;
     height: 100%;
     font-size: 12px;
+}
+.credits.is-open .content .bg {
+    display: block;
 }
 
 
