--- a/www/css/index.css
+++ b/www/css/index.css
@@ -97,6 +97,10 @@ body {
     font-size: 30px;
     text-shadow: 0 0 10px rgba(150, 150, 150, 1);
 }
+.app .detail .content p {
+    font-size: 20px;
+    margin: 5px 0;
+}
 /* animation */
 .app .detail .content {
     opacity: 0;
