--- a/www/css/index.css
+++ b/www/css/index.css
@@ -61,12 +61,18 @@ body {
     height: 70%;
     background: #333333;
     overflow: hidden;
+    padding-left: auto;
+    padding-right: auto;
 }
 
 .app .map svg {
-    position: absolute;
-    top: 0;
-    left: 0;
+    /*position: absolute;*/
+    /*top: 0;*/
+    /*left: 0;*/
+    height: 100%;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* animation */
@@ -145,6 +151,9 @@ body {
     left: 0;
     z-index: 1;
     margin: 5px;
+    margin-top: 20px;
+    margin-left: 10px;
+
     padding: 5px;
     -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
     -moz-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
