--- a/www/css/index.css
+++ b/www/css/index.css
@@ -131,10 +131,10 @@ body {
 /* animation */
 .app .detail .content {
     opacity: 0;
-    -webkit-transition: opacity 0.5s ease-out;
-    -moz-transition: opacity 0.5s ease-out;
-    -o-transition: opacity 0.5s ease-out;
-    transition: opacity 0.5s ease-out;
+    -webkit-transition: opacity 0.5s ease-out, font-size 0.5s ease-out;
+    -moz-transition: opacity 0.5s ease-out, font-size 0.5s ease-out;
+    -o-transition: opacity 0.5s ease-out, font-size 0.5s ease-out;
+    transition: opacity 0.5s ease-out, font-size 0.5s ease-out;
 }
 
 .app .detail .content.visible {
