added start text

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -141,6 +141,10 @@ body {
     opacity: 1;
 }
 
+.app .detail .content .start {
+    text-align: center;
+}
+
 .app .detail .bg {
     background-size: 0;
     -webkit-transition: background-size 0.5s ease-out;
